--- a/public/home.css
+++ b/public/home.css
@@ -279,35 +279,13 @@ footer {
   background-position: 100% 0%;
   background-repeat: no-repeat;
   background-color: hsl(0, 0%, 1.6%);
-}
-.curve {
-  position: absolute;
-  height: 200px;
-  width: 100%;
-  bottom: 0;
-}
-.curve::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 70%;
-  height: 100%;
-  background-color: var(--color-gradient-start);
-  transform: translate(44%, 60%);
+  --mask:
+    radial-gradient(103.23px at 50% calc(100% - 144px),#000 99%,#0000 101%) calc(50% - 120px) 0/240px 100%,
+    radial-gradient(103.23px at 50% calc(100% + 84px),#0000 99%,#000 101%) 50% calc(100% - 60px)/240px 100% repeat-x;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
 }
 
-.curve::after {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 70%;
-  height: 100%;
-  background-color: hsl(0, 0%, 1.6%);
-  transform: translate(-45%, 40%);
-  z-index: 1;
-}
 .intro .cont {
   display: flex;
   flex-direction: column;
@@ -408,7 +386,7 @@ footer {
   display: flex;
   background-color: var(--color-gradient-start);
   overflow: hidden;
-  padding: 50px 0px 75px 0;
+  padding: 30px 0px 75px 0;
 }
 
 .aboutSec .content {
@@ -666,12 +644,11 @@ footer {
 #projects {
   width: 100%;
   position: relative;
-  --mask: radial-gradient(34.99px at 50% 48px, #000 99%, #0000 101%)
-      calc(50% - 60px) 0/120px 100%,
-    radial-gradient(34.99px at 50% -18px, #0000 99%, #000 101%) 50% 30px/120px
-      100% repeat-x;
+ --mask:
+    radial-gradient(11.41px at 50% 15.5px,#000 99%,#0000 101%) calc(50% - 20px) 0/40px 100%,
+    radial-gradient(11.41px at 50% -5.5px,#0000 99%,#000 101%) 50% 10px/40px 100% repeat-x;
   -webkit-mask: var(--mask);
-  mask: var(--mask);
+          mask: var(--mask);
 }
 
 #projects .content {
@@ -679,7 +656,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 70px 0 175px 0px;
+  padding: 50px 0 175px 0px;
 }
 
 .card-sec {
@@ -696,6 +673,7 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 100%;
   width: 450px;
 }
 
@@ -704,9 +682,8 @@ footer {
   animation: float 7s ease-in-out infinite;
 }
 .card-image {
-  width: 450px;
-  max-width: 92%;
-  height: 260px;
+  width: 100%;
+  height: 250px;
   overflow: hidden;
   z-index: -2;
 }
@@ -719,6 +696,7 @@ footer {
 .card-text {
   margin: -30px auto;
   width: 360px;
+  max-width: 90%;
   background-color: #1d1c20;
   color: var(--color-white);
   padding: 20px;
@@ -1076,7 +1054,9 @@ footer {
   .navbar .toggle_btn {
     display: block;
   }
-
+.title h1{
+font-size: 30px;
+}
   .dropdown_menu {
     display: block;
   }
@@ -1085,4 +1065,11 @@ footer {
     justify-content: center;
     align-items: center;
   }
+  .card {
+  width: 98%;
+  max-width: 450px;
+}
+.card-image {
+  height: 220px;
+}
 }
